--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Hello Speech Recognition</h1>
     <button id="button">start</button>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
