--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>語音辨識</title>
+    <link href="css/datatables.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello Speech Recognition</h1>
-    <button id="button">start</button>
+    <div class="container d-flex align-items-center justify-content-center">
+        <div>
+            <h1>實體會議記錄工具</h1>
+        </div>
+    </div>
+    <select id="language">
+        <option value="zh-tw" default>台灣正體</option>
+        <option value="en-US">美式英語</option>
+    <!-- 在此增加 言語名稱 及 言語編碼 -->
+    </select>
+    <label>Continuously<input id="autoResume" type="checkbox" checked="checked"/></label>
+    <input id="toggle" type="button" value="Start Speech Recognition" onclick="toggleSpeechRecognition();"/>
+    <input id="clear" type="button" value="Clear Contents" onclick="clearContainer('Confirm to clear Contents？');"/>
+    <table width="100%">
+        <colgroup>
+            <col width="50%"/>
+            <col width="50%"/>
+        </colgroup>
+        <thead>
+            <tr>
+                <th><input type="button" value="Select all Temporary Contents" onclick="selectAllText(document.getElementById('bufferContainer'));"/></th>
+                <th><input type="button" value="Select all Out Contents" onclick="selectAllText(document.getElementById('resultContainer'));"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr valign="top">
+                <td><textarea id="bufferContainer" rows="1" cols="1" readonly="readonly" style="border: 1px solid #000000; width: 100%; height: 500px; resize: vertical;"></textarea></td>
+                <td><textarea id="resultContainer" rows="1" cols="1" style="border: 1px solid #000000; width: 100%; height: 500px; resize: vertical;"></textarea></td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="js/datatables.min.js"></script>
+    <script src="js/index_2.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
