--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <title>語音辨識</title>
     <link href="css/datatables.min.css" rel="stylesheet">
+    <link href="css/dictaphone.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div class="wrapper">
+        <header>
+          <h1>網路錄音機</h1>
+        </header>
+        <section class="main-controls">
+            <canvas class="visualizer" height="60px"></canvas>
+            <div id="buttons">
+                <button class="record">Record</button>
+                <button class="stop">Stop</button>
+            </div>
+        </section>
+      <section class="sound-clips">
+      </section>
+    </div>
+
     <div class="container d-flex align-items-center justify-content-center">
         <div>
             <h1>實體會議記錄工具</h1>
@@ -16,7 +32,7 @@
         <option value="en-US">美式英語</option>
     <!-- 在此增加 言語名稱 及 言語編碼 -->
     </select>
-    <label>Continuously<input id="autoResume" type="checkbox" checked="checked"/></label>
+    <p>Continuously<input class="sr" id="autoResume" type="checkbox" checked="checked"/></p>
     <input id="toggle" type="button" value="Start Speech Recognition" onclick="toggleSpeechRecognition();"/>
     <input id="clear" type="button" value="Clear Contents" onclick="clearContainer('Confirm to clear Contents？');"/>
     <table width="100%">
@@ -39,5 +55,6 @@
     </table>
     <script src="js/datatables.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/dictaphone.js"></script>
 </body>
 </html>
